# vibe

./: .gitignore  Cargo.toml  README.server.md  config.toml
.github/workflows/: release-debian.yml  release-macos.yml  release.yml
core/: Cargo.toml
core/src/: config.rs  transcribe.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: server.rs
src/: main_server.rs
vibe-server/: Cargo.toml
vibe-server/src/: config.rs  main.rs  server.rs  setup.rs
