[package]
name = "vibe-server"
version = "0.1.0"
description = "Vibe API Server"
authors = ["@thewh1teagle"]
license = "MIT"
repository = "https://github.com/utccnu/vibe"
edition = "2021"

[workspace]
members = [
    "vibe-server",
]

[workspace.dependencies]
serde_json = "1.0.114"
eyre = "0.6.12"

[dependencies]
# Root workspace doesn't need dependencies
# They should be specified in the individual crate's Cargo.toml

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }
