[package]
name = "vibe-server"
version = "0.1.0"
description = "Vibe API Server"
authors = ["@thewh1teagle"]
license = "MIT"
repository = "https://github.com/utccnu/vibe"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
