[package]
name = "vibe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tower-http = { version = "0.5.0", features = ["cors"] }
toml = "0.8.8"
uuid = { version = "1.3.0", features = ["v4"] }
vibe_core = { path = "../core" }
eyre = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
